# RedPanda-transpiler

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml
redpanda/: __init__.py  cli.py  loader.py  transpiler.py
redpanda/data/: builtins.json  constants.json  keywords.json
test files/: test.panda  test.py
tests/: test_transpiler.py
