[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "RedPanda-transpiler"
version = "0.1.0"
description = "A Python to Mandarin Chinese transpiler."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"

authors = [{ name = "fmasterpro27" }]

keywords = [
    "python",
    "transpiler",
    "compiler",
    "parser",
    "mandarin",
    "chinese",
    "language",
    "codegen",
    "redpanda",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = []

[project.scripts]
redpanda-tr = "redpanda.cli:main"

[project.urls]
Homepage = "https://github.com/Fmasterpro27/RedPanda-transpiler"
Repository = "https://github.com/Fmasterpro27/RedPanda-transpiler"
Issues = "https://github.com/Fmasterpro27/RedPanda-transpiler/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
redpanda = ["data/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
